bonus/k8s-demos/job.yaml
# Job: https://kubernetes.io/docs/concepts/workloads/controllers/job/
#
#
# NOTE: If you have a Fargate Profile for ns=on-fargate, this Job will run on Fargate - which is a killer use case for Fargate IMO.
#
# k apply -f job.yaml && watch kubectl get all -n on-fargate
#
# It will take 60 seconds for the jobs to start, running on fargate and then go to "Completed"
# 
# You should clean up to get the fargates to go away:
# k delete -f job.yaml
#
apiVersion: v1
kind: Namespace
metadata:
  name: on-fargate
