bonus/k8s-demos/configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-demo 
spec:
  containers:
  - image: nginx:1.19.0
    name: app
    #
    # As Environment Variables
    # The Environment variables are set at startup, AND NEVER CHANGE
    # If you run the "env" command you can see all the environment variables
    #
    volumeMounts:
    - name: config-volume
      mountPath: /etc/config
  volumes:
  - name: config-volume
    configMap:
      name: backend-config
