bonus/k8s-demos/secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-demo
spec:
  containers:
  - image: nginx:1.19.0
    name: app
    # 
    # Access as an ENVIRONMENT variable
    # This is considered OK, but not great.
    # If the program runs "env" or "export" that may dump the secret value to log output!
    # Also -there's no way to hot reload - the value is set at the time the pod is created.
    #
    volumeMounts:
    - name: secret-volume
      mountPath: /var/app
      readOnly: true
  volumes:
  - name: secret-volume
    secret:
      secretName: secret-password
