bonus/k8s-demos/service-headless.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: xraydaemon
spec:
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: xray-daemon
  template:
    metadata:
      labels:
        app: xray-daemon
    spec:
      volumes:
      - name: config-volume
        configMap:
          name: xray-config
      hostNetwork: true
      serviceAccountName: xray-daemon
      containers:
      - name: xray-daemon
        image: amazon/aws-xray-daemon
        imagePullPolicy: Always
        command: [ "/usr/bin/xray", "-c", "/aws/xray/config.yaml" ]
        resources:
          limits:
            memory: 24Mi
        ports:
        - name: xray-ingest
          containerPort: 2000
          hostPort: 2000
          protocol: UDP
        volumeMounts:
        - name: config-volume
          mountPath: /aws/xray
          readOnly: true
---
# k8s service definition for AWS X-Ray daemon headless service
apiVersion: v1
kind: Service
metadata:
  name: xray-service
spec:
  selector:
    app: xray-daemon
  # THIS IS WHAT MAKES IT A HEADLESS SERVICE
  clusterIP: None
  ports:
  - name: incoming
    port: 2000
    protocol: UDP
